src/styles/bottom-bar.scss
@use "../var";

.bottom-bar {
    a, p {all:unset};

    $padding: 12px;
    align-items: end;
    background-color: var.$black-1;
    bottom: 0;
    color: var.$white-0;
    display: flex;
    justify-content: space-between;
    padding: 0 $padding;
    position: fixed;
    width: calc(100% - $padding*2);
    
    a {
        cursor: pointer;
        padding: 2px 6px;
        transition: color 0.2s, background-color 0.2s;

        &:hover { background-color: var.$grey-3; color: var.$white-0 }
        &.active { background-color: var.$white-0; color: var.$black-1; font-weight: 600; }
    }

    p { font-size: 0.7em; font-weight: 300 }
}

